Turn into fullstack

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "frontend-boilerplate-react-nextjs",
+  "name": "fullstack-boilerplate-react-nextjs",
   "version": "1.0.0",
   "scripts": {
-    "dev": "cd app-frontend && npm run dev",
-    "build": "cd app-frontend && npm install && npm run build",
-    "start": "cd app-frontend && npm run start",
+    "dev": "cd app-fullstack && npm run dev",
+    "build": "cd app-fullstack && npm install && npm run build",
+    "start": "cd app-fullstack && npm run start",
     "test": "cypress run"
   },
   "devDependencies": {
