--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           build: npm run build
           start: npm run start
-          wait-on: 'npx wait-on --timeout 30000 tcp:${{ steps.vars.outputs.port }}'
+          wait-on: 'npx wait-on --timeout ${{ env.WAIT_ON_TIMEOUT }} tcp:${{ steps.vars.outputs.port }}'
 
   # Verifies the boilerplate can start and run in codespace environment
   test-for-codespaces:
@@ -83,7 +83,7 @@ jobs:
         with:
           build: npm run build
           start: npm run start
-          wait-on: 'npx wait-on --timeout 30000 tcp:${{ steps.vars.outputs.port }}'
+          wait-on: 'npx wait-on --timeout ${{ env.WAIT_ON_TIMEOUT }} tcp:${{ steps.vars.outputs.port }}'
 
   check-dependabot:
     needs:
