--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -47,7 +47,7 @@ jobs:
           start: npm run start
           wait-on: 'npx wait-on --timeout ${{ env.WAIT_ON_TIMEOUT }} tcp:${{ steps.vars.outputs.port }}'
         env:
-          WAIT_ON_TIMEOUT: ${{ secrets.WAIT_ON_TIMEOUT }}
+          WAIT_ON_TIMEOUT: ${{ vars.WAIT_ON_TIMEOUT }}
 
   # Verifies the boilerplate can start and run in codespace environment
   test-for-codespaces:
@@ -87,7 +87,7 @@ jobs:
           start: npm run start
           wait-on: 'npx wait-on --timeout ${{ env.WAIT_ON_TIMEOUT }} tcp:${{ steps.vars.outputs.port }}'
         env:
-          WAIT_ON_TIMEOUT: ${{ secrets.WAIT_ON_TIMEOUT }}
+          WAIT_ON_TIMEOUT: ${{ vars.WAIT_ON_TIMEOUT }}
 
   check-dependabot:
     needs:
